--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="descriptiom"
         content="Compliance training and compliance support for brokers in the financial services industry">
     <meta name="keywords"
-        content="compliance solutions. compliance training. compliance audit. compliance support. compliance admin. compliance administration. compliance process. compliance procedures">
-    <title>Comsol, your trusted compliance specialist</title>
+        content="broker compliance solutions. broker compliance training. broker compliance audit. broker compliance support. broker compliance admin. broker compliance administration. broker compliance process. compliance procedures">
+    <title>Broker Compliance, your trusted compliance expert</title>
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
@@ -29,9 +29,9 @@
     </style>
 </head>
 
-            <h2>Welcome to ComSol. Our site is currently under construction</h2>
+            <h2>Welcome to Broker Compliance </h2>
             <br>
-            <p>We're working hard to bring you a better experience. Check back soon!</p>
+            <p>Our site is currently under construction.We're working hard to bring you a better experience. Check back soon!</p>
            
 </body>
 
